Update project to Java 23 and replace Java 17 compatibility methods with modern syntax
Co-authored-by: commjoen <1457214+commjoen@users.noreply.github.com>